2022-03-16: [BUGFIX] Better positioning of popups on multiscreen setups (#50)
2022-03-15: [BUGFIX] Ensure toolkit disables naviagation when no focusable controls (#49)
2022-03-15: [DOCS] Fix docs build error (git --> https)
2022-03-05: [GITHUB] Require PRs to update CHANGELOG
2022-03-05: [BUGFIX] Fix tooltip only showing once
2022-03-05: [BUGFIX] Better handling of empty menus in StatusNotifier widget
2022-01-09: [FEATURE] Add SnapCast widget (missing some functionality)